--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.4.7",
+    "morgan": "^1.7.0",
     "request": "^2.69.0"
   }
 }
